<resources>
    <string name="app_name">edayfashion</string>
    <string name="edit_text_name_hint">Tên</string>
    <string name="edit_text_email_hint">Email</string>
    <string name="edit_text_password_hint">Mật khẩu</string>
    <string name="edit_text_password_confirm_hint">Xác nhận mật khẩu</string>
    <string name="button_create_account">Tạo tài khoản mới</string>
    <string name="button_sign_in">Đăng nhập</string>
    <string name="text_view_login">Đã có tài khoản? Đăng nhập</string>
    <string name="text_view_create_account">Tạo tài khoản mới</string>
    <string name="signing_in_message">Vui lòng đợi giây lát…</string>
    <string name="sign_in_success_message">Đăng nhập thành công</string>
    <string name="sign_up_message">Vui lòng đợi giây lát…</string>
    <string name="created_account_success_message">Tạo tài khoản thành công</string>
    <string name="app_bar_home">Trang chủ</string>
    <string name="app_bar_favourous">Yêu thích</string>
    <string name="app_bar_appreciate">Đánh giá cao</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="log_out">Đăng xuất</string>
    <string name="log_out_success_message">Đăng xuất thành công</string>
    <string name="text_view_gender">Giới tính</string>
    <string name="text_view_phone">Số điện thoại</string>
    <string name="text_view_address">Địa chỉ</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="load_user_profile_failed_message">Có lỗi khi lấy tài khoản người dùng</string>
    <string name="load_transaction_detail_failed_message">Có lỗi khi lấy dữ liệu sản phẩm</string>
    <string name="count">Số lượng</string>
    <string name="button_add_cart">Thêm vào giỏ hàng</string>
    <string name="detail_product">Chi tiết sản phẩm</string>
    <string name="app_bar_cart">Giỏ hàng</string>
    <string name="label_payment_method">Phương thức thanh toán</string>
    <string name="label_atm">Chuyển khoản</string>
    <string name="label_cash">Tiền mặt</string>
    <string name="button_payment">Đặt hàng</string>
    <string name="add_cart_success_message">Thêm vào giỏ hàng thành công</string>
    <string name="add_cart_failed_message">Lỗi thêm vào giỏ hàng</string>
    <string name="totalPrice">Tổng tiền</string>
    <string name="edit_text_name">Nhập tên</string>
    <string name="edit_text_address">Nhập địa chỉ</string>
    <string name="edit_text_phone">Nhập số điện thoại</string>
    <string name="button_cancel">Hủy</string>
    <string name="button_OK">Xác nhận</string>
    <string name="menu_item_edit_profile">Chỉnh sửa thông tin cá nhân</string>
</resources>
