<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <com.crazyteam.edayfashion.widgets.HasTextChangedActionEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_name"
                android:inputType="textCapWords"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_weight="1" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp">

            <com.crazyteam.edayfashion.widgets.HasTextChangedActionEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_address"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp">

            <com.crazyteam.edayfashion.widgets.HasTextChangedActionEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_phone"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/button_cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOk"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:text="@string/button_OK" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>