<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <CheckBox
            android:id="@+id/cbSelectAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Chọn tất cả"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="Tổng tiền dự kiến:"
            android:textSize="12dp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalCart"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text=""
            android:textSize="14dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactionsCart"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/label_payment_method"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text_size" />

    <RadioGroup
        android:id="@+id/sourceGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optionAtm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/label_atm" />

        <RadioButton
            android:id="@+id/optionCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_cash" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/button_payment"
        android:textColor="@color/white"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp" />

</LinearLayout>