<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/text_view_gender"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/normal_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/text_view_phone"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/normal_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/text_view_address"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/normal_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

    </LinearLayout>

<!--    <com.crazyteam.edayfashion.widgets.LoadingWidget-->
<!--        android:visibility="gone"-->
<!--        android:id="@+id/loading"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

</FrameLayout>
