<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="@string/detail_product"
        android:textColor="#ffffff"
        android:textSize="@dimen/large_text_size"
        android:layout_marginTop="1sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/idItem"
        android:layout_marginTop="@dimen/large_text_size"
        >
        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/large_text_size">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/normal_text_size">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Amount:">
                </TextView>
                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="10000">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/normal_text_size">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Price buy:">
                </TextView>
                <TextView
                    android:id="@+id/tvPriceBuy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="10000">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/normal_text_size">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Price sale:">
                </TextView>
                <TextView
                    android:id="@+id/tvPriceSale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="10000">
                </TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_text_size"
                android:text="Tên sản phẩm"
                android:textSize="@dimen/large_text_size">
            </TextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="14dp"
                android:text="@string/count"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text_size"
                android:layout_marginTop="@dimen/normal_text_size"
            />
            <com.crazyteam.edayfashion.widgets.HasTextChangedActionEditText
                android:id="@+id/edtCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/count"
                android:inputType="numberDecimal"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddCart"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_add_cart"
        android:layout_margin="@dimen/normal_text_size"/>

</LinearLayout>